# devops

./: .gitignore  README.md  SKILL.md  install.sh  pyproject.toml
cloudops/: __init__.py  bootstrap.py  cli.py  config.py  dashboard.py  render.py  spawn_flow.py
cloudops/commands/: __init__.py  account_metrics.py  clone_instance.py  list_instances.py  list_offers.py  spawn_instance.py  start_instance.py  stop_instance.py  terminate_instance.py
cloudops/providers/: __init__.py  aws.py  base.py  vast.py
scripts/account_metrics/: account_metrics.py
scripts/clone_instance/: clone_instance.py
scripts/list_instances/: list_instances.py
scripts/list_offers/: list_offers.py
scripts/spawn_instance/: spawn_instance.py
scripts/start_instance/: start_instance.py
scripts/stop_instance/: stop_instance.py
scripts/terminate_instance/: terminate_instance.py
